chore: auto-sync [2026-04-09 06:55 UTC] — 24 source files, 16 artifacts
